# fraud-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  training.yml
config/: params.yaml  params_codespaces.yaml  params_production.yaml
data/: .gitkeep  top_30_features.txt
deployment/: Dockerfile  Dockerfile.training  docker-compose.yml
deployment/api/: __init__.py  main.py  schemas.py
docs/: MLOPS.md
infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
mlops/: __init__.py  monitoring.py  registry.py  tracking.py
pipelines/: __init__.py  inference_pipeline.py  monitoring_pipeline.py  training_pipeline.py
results/: .gitkeep  feature_importance.csv  metrics.json
src/: __init__.py  data_preprocessing.py  evaluation.py  explainability.py  feature_selection.py  main.py  optuna_tuning.py  stacking_model.py
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_evaluation.py  test_model.py  test_preprocessing.py
